[tool.poetry]
name = "pmkg-pytasuku"
version = "0.1.0"
description = "A task execution system inspired by Make and Rake, implemeted in Python."
authors = ["Pramook Khungurn <pramook@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pytasuku", from = "src" },
    { include = "example", from = "src"},
]
exclude = [
    "src/example/*"
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
